--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Austin Green",
   "dependencies": {
     "@popperjs/core": "^2.11.5",
+    "airtable": "^0.11.4",
     "bootstrap": "^5.2.0",
     "bulma": "^0.9.0",
     "form-data": "^4.0.0",
