--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "@fontsource/poppins": "^4.5.9",
+    "@fontsource/satisfy": "^4.5.6",
     "@popperjs/core": "^2.11.5",
     "airtable": "^0.11.4",
     "bootstrap": "^5.2.0",
