--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bulma": "^0.9.0",
     "form-data": "^4.0.0",
     "gatsby": "^4.0.0",
+    "gatsby-plugin-advanced-sitemap": "^2.1.0",
     "gatsby-plugin-canonical-urls": "^4.20.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-netlify": "^5.0.0",
@@ -21,7 +22,6 @@
     "gatsby-plugin-robots-txt": "^1.7.1",
     "gatsby-plugin-sass": "^5.0.0",
     "gatsby-plugin-sharp": "^4.0.0",
-    "gatsby-plugin-sitemap": "^5.20.0",
     "gatsby-remark-copy-linked-files": "^5.0.0",
     "gatsby-remark-images": "^6.0.0",
     "gatsby-remark-relative-images": "^0.3.0",
