--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby": "^4.0.0",
     "gatsby-plugin-advanced-sitemap": "^2.1.0",
     "gatsby-plugin-canonical-urls": "^4.20.0",
+    "gatsby-plugin-google-tagmanager": "^4.21.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-netlify": "^5.0.0",
     "gatsby-plugin-netlify-cms": "^6.0.0",
